--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/ufrn.svg" />
     <link rel="mask-icon" href="/ufrn-mask.svg" color="#000000" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SIGAA</title>
   </head>
-  <body>
+  <body class="font-body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
